# auth-gatekeeper

./: .dockerignore  .gitignore  .prettierrc  .versionrc.json  CHANGELOG.md  Cargo.toml  README.md  dockerfile  package.json  tsconfig.json
.devcontainer/: devcontainer.json  dockerfile
docker/: bin.dockerfile  debug.dockerfile  docker-compose.debug.yml  dockerfile  supervisord.conf
docker/auth-gatekeeper/: auth-request.conf  server.conf
docker/etc/supervisor/conf.d/: supervisord.conf
docker/etc/traefik/providers/: auth.toml
docker/etc/traefik/template/: auth.toml
docker/nginx/: auth-gatekeeper-upstream.conf  docker-entrypoint.sh  dockerfile  supervisord.conf
docker/nginx/auth-gatekeeper/: auth-request-proxy.conf  auth-request.conf  server.conf
docker/scripts/: docker-entrypoint.sh
docker/traefik/: auth.toml  debug.dockerfile  docker-entrypoint.sh  dockerfile  supervisord.conf  traefik.toml
docker/traefik/etc/: traefik.debug.toml  traefik.prod.toml
docker/traefik/etc/providers/: auth.toml
scripts/: build.sh  postbump.sh
src/: app.ts  config.rs  config.ts  crypto.ts  error.rs  http.ts  index.ts  main.rs  session.rs  state.ts
src/api/: api-rest.ts  api.ts  mod.rs
src/provider/: base.rs  keycloak.rs  mod.rs  oidc.rs  openid.ts  provider.ts
src/server/: data.rs  handler.rs  http.rs  mod.rs  response.rs  state.rs
src/settings/: args.rs  env.rs  mod.rs
src/upstream/: upstream-rest.ts  upstream.ts
src/util/: cookie.ts  crypto.rs  crypto.ts  jwt.rs
