[package]
name = "auth-gatekeeper"
version = "0.1.0"
authors = ["rhangai <hangai.renan@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2.0"
actix-rt = "1.0"
ring = "0.16.15"
base64 = "0.12.2"
async-trait = "0.1.36"
reqwest = { version = "0.10.6", features = ["json"] }
serde = "1.0.114"
serde_json = "1.0"
futures = "0.3"