[package]
name = "auth-gatekeeper"
version = "0.1.0"
authors = ["rhangai <hangai.renan@gmail.com>"]
edition = "2018"

[[bin]]
name = "auth-gatekeeper"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.7.1"
actix-web = "2.0"
actix-rt = "1.0"
actix-http = "1.0"
ring = "0.16.15"
base64 = "0.12.2"
async-trait = "0.1.36"
reqwest = { version = "0.10.6", features = ["json"] }
serde = "1.0.114"
serde_json = "1.0"
futures = "0.3"
jsonwebtoken = "7"
envconfig = "0.8"
envconfig_derive = "0.8"