[package]
name = "auth-gatekeeper"
version = "0.1.0"
authors = ["rhangai <hangai.renan@gmail.com>"]
edition = "2018"

[[bin]]
name = "auth-gatekeeper"
path = "src/main.rs"

[dependencies]
log = "0.4"
env_logger = "0.8"
actix-web = "3.0"
ring = "0.16"
base64 = "0.13"
async-trait = "0.1"
qstring = "0.7.2"
url = "2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
jsonwebtoken = "7"
config = "0.10"
getopts = "0.2"
bitflags = "1.2"
time = "0.2"